--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "vstukanov@me.com",
   "license": "ISC",
   "devDependencies": {
+    "jshint": "^2.9.1",
+    "jshint-loader": "^0.8.3",
     "webpack": "^1.12.14"
   },
   "dependencies": {
