--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "install": "node node_modules/webpack/bin/webpack.js"
+    "install": "node_modules/.bin/webpack"
   },
   "author": "vstukanov@me.com",
   "license": "ISC",
