--- a/package.json
+++ b/package.json
@@ -11,15 +11,26 @@
   "author": "vstukanov@me.com",
   "license": "ISC",
   "devDependencies": {
+    "file-loader": "^0.8.5",
+    "url-loader": "^0.5.7",
+    "css-loader": "^0.23.1",
     "html-loader": "^0.4.3",
     "jshint": "^2.9.1",
     "jshint-loader": "^0.8.3",
+    "node-sass": "^3.4.2",
+    "open-url": "^2.0.2",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.0",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
     "angular": "1.5.x",
     "angular-route": "^1.5.0",
-    "jquery": "^1.12.1"
+    "filesize": "^3.2.1",
+    "font-awesome": "^4.5.0",
+    "foundation": "^4.2.1-1",
+    "moment": "^2.12.0",
+    "underscore": "^1.8.3"
   }
 }
